@@ -11,6 +11,8 @@
 
 	* testsuite/check_jid.erl: Complete testsuite with length checks.
 
+	* src/exmpp_jlib.erl: Drop JID handling functions.
+
 2007-02-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/exmpp_jid.erl: Reworked JID parsing to handle more error cases.
